# RTYPE-DOCUMENTATION

./: .gitignore  .gitmodules  Acceleration_8cpp.html  Acceleration_8hpp.html  Acceleration_8hpp_source.html  BonusSystem_8cpp.html  BonusSystem_8hpp.html  BonusSystem_8hpp_source.html  Bonus_8cpp.html  Bonus_8hpp.html  Bonus_8hpp_source.html  Bullet_8cpp.html  Bullet_8hpp.html  Bullet_8hpp_source.html  CHANGELOG.md  CHANGELOG_8md.html  CMakeLists.txt  CONTRIBUTING_8md.html  CONTRIBUTING__zh_8md.html  Client_2main_8cpp.html  Clock_8cpp.html  Clock_8hpp.html  Clock_8hpp_source.html  CollisionSystem_8cpp.html  CollisionSystem_8hpp.html  CollisionSystem_8hpp_source.html  ComponentManager_8cpp.html  ComponentManager_8hpp.html  ComponentManager_8hpp_source.html  Controlable_8cpp.html  Controlable_8hpp.html  Controlable_8hpp_source.html  Damage_8cpp.html  Damage_8hpp.html  Damage_8hpp_source.html  Doxyfile  EnemyShootSystem_8cpp.html  EnemyShootSystem_8hpp.html  EnemyShootSystem_8hpp_source.html  EntityManager_8cpp.html  (+792 more)
.github/workflows/: gen-doxygen.yml  gen_doxygen.yml  github-actions-demo.yml
Client/: GameClient.cpp  GameClient.hpp  MenuClient.cpp  MenuClient.hpp  main.cpp
Clock/include/: Clock.hpp
Clock/sources/testMain/: main.cpp
Ecs/: Clock.cpp  Clock.hpp  Include.hpp  IncludeComponents.hpp  IncludeCpp.hpp  IncludeSystem.hpp  Manager.cpp  Manager.hpp
Ecs/Component/: ComponentManager.cpp  ComponentManager.hpp
Ecs/Component/include/: Acceleration.hpp  Bonus.hpp  Bullet.hpp  Controlable.hpp  Damage.hpp  Hitbox.hpp  IComp.hpp  Id.hpp  Pattern.hpp  Position.hpp  Rotate.hpp  Size.hpp  Speed.hpp  Sprite.hpp  Text.hpp  Texture.hpp  include.hpp
Ecs/Component/sources/: Acceleration.cpp  Bullet.cpp  Controlable.cpp  Damage.cpp  Health.cpp  Hitbox.cpp  Id.cpp  Pattern.cpp  Position.cpp  Rotate.cpp  Size.cpp  Speed.cpp  Sprite.cpp  Text.cpp
Ecs/Entity/: Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp
Ecs/System/: BonusSystem.cpp  CollisionSystem.cpp  CollisionSystem.hpp  EnemyShootSystem.cpp  EnemyShootSystem.hpp  EventsSystem.cpp  EventsSystem.hpp  GraphicSystem.cpp  GraphicSystem.hpp  MoveSystem.cpp  MoveSystem.hpp  ShootSystem.cpp  ShootSystem.hpp  System.cpp  System.hpp  SystemManager.cpp  SystemManager.hpp  TextSystem.cpp  TextSystem.hpp
Graphics/: Events.cpp  Events.hpp  InitSfml.cpp  InitSfml.hpp
Network/: Enum.hpp  NetworkClient.cpp  NetworkClient.hpp  NetworkRoom.cpp  NetworkServer.cpp  NetworkServer.hpp  PacketOperatorSurcharge.hpp
client/: main.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  (+136 more)
server/: Server.cpp  Server.hpp  main.cpp  surchargeVector.hpp
server/GameInstance/: GameServer.cpp  GameServer.hpp
shared/ECS/include/: IComp.hpp  acceleration.hpp  bonus.hpp  controlable.hpp  damage.hpp  health.hpp  hitbox.hpp  id.hpp  include.hpp  pattern.hpp  position.hpp  rotation.hpp  size.hpp  sound.hpp  speed.hpp  text.hpp  texture.hpp  weapon.hpp
shared/ECS/sources/: controlable.cpp  hitbox.cpp  position.cpp  rotation.cpp  size.cpp  text.cpp
system/: GraphicSystem.cpp  GraphicSystem.hpp  system.cpp  system.hpp
